# PyxelWidgets

./: .gitignore  README.md  setup.cfg
examples/: FaderSize.py  Knobs.py  Life.py  PolySeq.py  buttontest.py  pixeltest.py  test.py  test2.py  test3.py  test4.py  test5.py
examples/DAWControl/: DAWControl.py  requirements.txt
examples/Keyboard/: Keyboard.py
examples/Multiwindow/: Multiwindow.py
src/PyxelWidgets/: Manager.py  Window.py  WindowManager.py  __init__.py
src/PyxelWidgets/Controller/: Controller.py  OSC.py  __init__.py
src/PyxelWidgets/Controller/Effects/: Effect.py  Gaussian.py  Pulse.py  Sine.py  Triangle.py  __init__.py
src/PyxelWidgets/Controller/MIDI/: MIDI.py  __init__.py  consts.py
src/PyxelWidgets/Controller/OSC/: __init__.py
src/PyxelWidgets/Controllers/: __init__.py
src/PyxelWidgets/Controllers/MIDI/: __init__.py
src/PyxelWidgets/Controllers/OSC/: __init__.py
src/PyxelWidgets/Controllers/Virtual/: __init__.py
src/PyxelWidgets/Helpers/: __init__.py
src/PyxelWidgets/Util/: Clock.py  RingBuffer.py  __init__.py
src/PyxelWidgets/Util/Clock/: __init__.py
src/PyxelWidgets/Util/Effects/: Effect.py  Gaussian.py  Pulse.py  Sine.py  Triangle.py  __init__.py
src/PyxelWidgets/Util/RingBuffer/: __init__.py
src/PyxelWidgets/Utils/: __init__.py
src/PyxelWidgets/Utils/Clock/: __init__.py
src/PyxelWidgets/Widgets/: Button.py  ButtonGroup.py  Fader.py  Keyboard.py  Knob.py  Life.py  Sequencer.py  Sprite.py  Tracker.py  Widget.py  XY.py  __init__.py
src/PyxelWidgets/Window/: __init__.py
src/PyxelWidgets/examples/: test4.py
(+47 files in other folders)
