[metadata]
name = PyxelWidgets-NullMember
version = 0.0.1
author = Malik Enes Safak
author_email = e.maliksafak@gmail.com
description = GUI Framework for low resolution devices (e.g. Novation Launchpad, LED Keyboards)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NullMember/PyxelWidgets
project_urls =
    Bug Tracker = https://github.com/NullMember/PyxelWidgets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    python-rtmidi
    numpy

[options.packages.find]
where = src